<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:text="@string/welcome"
        android:fontFamily="@font/ubuntu"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/to"
        android:fontFamily="@font/ubuntu"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/knowledge"
        android:fontFamily="@font/ubuntu"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/hub"
        android:fontFamily="@font/ubuntu"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/startingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:padding="14dp"
        android:textSize="30sp"
        android:fontFamily="@font/ubuntu"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:text="@string/passion"
        android:fontFamily="@font/ubuntu"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />


</LinearLayout>