<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardsActivity"
    android:orientation="vertical"
    android:background="@color/black"
    >

<!--    heading -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/knowledge_cards"
        android:fontFamily="@font/ubuntu"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        />

<!--    1st row with two cards-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

<!--        android development card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/androidCard"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/orange"
        >

        <LinearLayout
            android:id="@+id/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/ubuntu"
                android:padding="5dp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/development"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/ubuntu"
                android:padding="5dp"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

<!--        web development card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/webCard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/orange"
            >

            <LinearLayout
                android:id="@+id/web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/web"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/ubuntu"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/development"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/ubuntu"
                    android:padding="5dp"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

<!--    2nd row with two cards -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <!--        data analysis card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/dataCard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/orange"
            >

            <LinearLayout
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/ubuntu"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/analysis"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/ubuntu"
                    android:padding="5dp"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--        machine learning card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/mlCard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/orange"
            >

            <LinearLayout
                android:id="@+id/machine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/machine"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/ubuntu"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learning"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/ubuntu"
                    android:padding="5dp"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

<!--    3rd row with two cards -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <!--        blockchain card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/blockCard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/orange"
            >

            <LinearLayout
                android:id="@+id/blockchain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blockchain"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/ubuntu"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--        large language model card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/llmCard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/orange"
            >

            <LinearLayout
                android:id="@+id/llm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/large"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/ubuntu"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/ubuntu"
                    android:padding="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/ubuntu"
                    android:padding="5dp"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/contact_us"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        />

</LinearLayout>